# triva

./: .gitignore  ChangeLog  GNUmakefile  GNUmakefile.in  INSTALL  INSTALL.mac  INSTALL.simplified  README  README.md  Triva.tiff  TrivaApp.fbp  TrivaApp.h  TrivaApp.m  TrivaApp.mm  TrivaCommand.h  TrivaCommand.m  TrivaController+Chunks.m  TrivaController+Components.m  TrivaController.h  TrivaController.m  TrivaPajeComponent.h  TrivaPajeComponent.m  TrivaPajeComponent.mm  TrivaWindow.h  TrivaWindow.mm  TrivaWindowAuto.h  TrivaWindowAuto.mm  aclocal.m4  bootstrap  checkinstall-make  config.h.in  configure.ac  description-pak  triva-state-colors  trivaInfo.plist
2009-sbac-tutorial/: 3dtechnique.tex  aggtechnique.tex  analysis.tex  (+11 more)
trunk/: GNUmakefile.in  aclocal.m4  configure.ac  convert-treemap-print.sh  description-pak  revisoes.txt
trunk/docs/: GNUmakefile.in  config.t2t  contact.t2t  download.t2t  forge.t2t  index.html  index.t2t  menu-links.html  menu.t2t
trunk/docs/css/: modern.css  site.css
trunk/docs/old/: index.t2t.bk
trunk/gui/: triva.fbp
trunk/src/: GNUmakefile.in  main.mm  resources.cfg
trunk/src/Media/VisuApp/materials/scripts/: cube.material  treemap.material
trunk/src/Media/gui2/: pilcha.layout
trunk/src/Media/gui2/looknfeel/: WindowsLook.looknfeel
trunk/src/core/: AppController.h  AppController.mm  BundleGUIEvents.h  BundleGUIEvents.mm  GNUmakefile.in  OgreConfigure.mm  OgreEventListener.h  OgreEventListener.mm  ProtoController.h  ProtoController.mm  TRIVAGUI.cpp  TRIVAGUI.h  TRIVAGUIEvents.h  TRIVAGUIEvents.mm  TrivaController+States.mm  TrivaController.h  TrivaController.mm  wxOgreRenderWindow.h
trunk/src/draw/: DrawManager+Animation.mm  DrawManager+ApplicationGraph.mm  DrawManager+Base.mm  DrawManager+Hierarchy.mm  DrawManager+Materials.mm  DrawManager+Mouse.mm  DrawManager+Paje.mm  DrawManager+ResourcesGraph.mm  DrawManager+SquarifiedTreemap.mm  DrawManager+TimestampedObjects.mm  DrawManager.h  DrawManager.mm  GNUmakefile.in  PajeOgreFilter.h  PajeOgreFilter.m  PajeOgreFilter.mm  ProtoView+Base.mm  ProtoView.h  ProtoView.mm  TrivaPajeFilter.m  TrivaResourcesGraph.h  TrivaResourcesGraph.mm  TrivaTreemap+Graphviz.mm  TrivaTreemap.h  TrivaTreemap.mm  TrivaTreemapSquarified.h  TrivaTreemapSquarified.mm
trunk/src/draw/ambient/: AmbientManager.h  AmbientManager.mm  Axis.h  Ground.h  Ground.mm  Origin.h  XAxis.h  XAxis.mm  YAxis.h  YAxis.mm
trunk/src/draw/extras/: DynamicRenderable.mm  GNUmakefile.in  Line3D.cpp  Line3D.h  MovableText.h
trunk/src/draw/layout/: Layout.h  Layout.mm  LayoutContainer.h  LayoutContainer.mm  LayoutLink.h  LayoutState.h  LayoutState.mm
trunk/src/draw/position/: GNUmakefile.in  Position.h  Position.m  PositionGraphviz.h  PositionGraphviz.m
trunk/src/fusion/: FusionChunk.h  FusionChunk.m  FusionContainer.h  FusionContainer.m  FusionLink.h  FusionLink.m  FusionState.h  FusionState.m  GNUmakefile.in  TrivaFusion.h  TrivaFusion.m
trunk/src/general/: BundleCenter.h  GNUmakefile.in  ProtoComponent+Commands.m  ProtoComponent+Queries.m  ProtoComponent.h
trunk/src/gui/: BundleGUIEvents.h  BundleGUIEvents.mm  GNUmakefile.in  GUI_Base.h  GUI_Base.mm  GUI_CombinedCounter.h  GUI_CombinedCounter.mm  GUI_Preferences.h  GUI_Preferences.mm  ProtoView+KeyboardReceivers.mm  ProtoView.h  Triva2DFrame.h  Triva2DFrame.mm  Triva3DFrame.h  TrivaAutoGeneratedGUI.cpp  TrivaAutoGeneratedGUI.h  TrivaAutoGeneratedGUI.mm  TrivaColorWindowEvents.h  TrivaColorWindowEvents.mm  TrivaController+Base.mm  TrivaController+Camera.mm  TrivaController+Scrollbar.mm  TrivaController+Select.mm  TrivaController+States.mm  TrivaController+Zoom.mm  TrivaController.h  TrivaController.mm  wxInputEventListener.h  wxOgreRenderWindow.h  wxOgreRenderWindow.mm
trunk/src/gui/ambient/: AmbientManager.mm  Ground.h  Origin.h  ZAxis.h  ZAxis.mm
trunk/src/gui/camera/: CameraManager.h  CameraManager.mm
trunk/src/gui/draw/: DrawManager.h  DrawManager.mm
trunk/src/gui/draw/layout/: LayoutState.h  LayoutState.mm
trunk/src/gui/extras/: MovableText.mm
trunk/src/gui/selector/: GNUmakefile.in  SelectorManager.h  SelectorManager.mm
trunk/src/interval/: GNUmakefile.in  Interval.h  Interval.m
trunk/src/memory/: GNUmakefile.in
trunk/src/ogre-simulator/: GNUmakefile.in  OgreProtoSimulator+Events.mm  OgreProtoSimulator.mm  XContainer.h  XLink.mm  XObject.h
trunk/src/paje-simulator/: GNUmakefile.in  TrivaPajeComponent.h  TrivaPajeComponent.m  TrivaPajeComponent.mm  TrivaPajeFilter.h
trunk/src/reader/: GNUmakefile.in  ProtoReader.h  ProtoReader.m  TrivaPajeReader.h  TrivaPajeReader.m
trunk/src/time-slice/: GNUmakefile.in  TimeSlice.h  TimeSlice.m  Tree.h  Tree.m  TreeIntegrated.h  TreeIntegrated.m  TreeValue.h  TreeValue.m  Treemap.h  Treemap.m
trunk/src/view/: BundleGUIEvents.h  BundleGUIEvents.mm  GNUmakefile.in  OgreEventListener.h  ProtoSensor.h  ProtoSensor.mm  ProtoView+CEGUI.mm  ProtoView+KeyboardReceivers.mm  ProtoView+Selection.mm  ProtoView.h  ProtoView.mm  TrivaAutoGeneratedGUI.cpp  TrivaAutoGeneratedGUI.h  TrivaController+Draw.mm  TrivaController+Select.mm  TrivaController+States.mm  TrivaController.h  TrivaController.mm  TrivaRenderWindow.h  TrivaRenderWindow.mm  VisuInputManager.h
trunk/src/view/ambient/: AmbientManager.mm  GNUmakefile.in  Ground.mm  XAxis.h  XAxis.mm  YAxis.mm  ZAxis.mm
trunk/src/view/camera/: Camera2Manager.h  CameraManager.h  CameraManager.mm  GNUmakefile.in
trunk/src/view/cegui/: .CEGUIManager.mm.swp  CEGUIManager+BundleWindow.mm  CEGUIManager+ControlWindow.mm  CEGUIManager.h  CEGUIManager.mm  GNUmakefile.in
trunk/src/view/draw/: DrawManager.h  DrawManager.mm  GNUmakefile.in
trunk/src/view/draw/layout/: GNUmakefile.in  Layout.h  Layout.mm  LayoutContainer.mm  LayoutLink.h  LayoutLink.mm  LayoutState.mm
trunk/src/view/draw/position/: GNUmakefile.in  PositionGraphviz.m
trunk/src/view/exit/: ExitManager.mm  GNUmakefile.in  StateListener.h
trunk/src/view/extras/: GNUmakefile.in
trunk/src/view/keyboard/: GNUmakefile.in  KeyboardListener.mm
trunk/src/view/mouse/: GNUmakefile.in  MouseListener.h  MouseListener.mm
(+685 files in other folders)
